[package]
name = "fooocus_chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1", features = ["full"] }
async-openai = "0.17"
reqwest = { version = "0.11", default-features = false }
anyhow = "1"
serde_json = { version = "1" }
base64 = "0.21"
serde = { version = "1", features = ["derive"] }
rand = "0.8"
opener = "0.6"
